--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,10 @@
 {% include head.html %}
-    {{ content }}
+    <main>
+
+        <h1>{{ page.title }}</h1>
+
+        {{ content }}
+
+    </main>
     {% include nav.html %}
 {% include foot.html %}
