--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation" >
     <div class="navbar-header">
-        <a href="../" class="navbar-brand">Cheatsheet</a>
+        <a href="../" class="navbar-brand">Cheatsheets</a>
     </div>
     <ul class="nav navbar-nav">
         {% for p in site.pages %}
