--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 {% include head.html %}
 {% include nav.html %}
     <div class="container bs-docs-container">
-        {{ content }}
+        <main>
+            {{ content }}
+        </main>
     </div>
 {% include foot.html %}
