--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include head.html %}
 {% include nav.html %}
-    <div class="container bs-docs-container">
+    <div class="col-md-9">
         <main>
             {{ content }}
         </main>
