--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 {% include head.html %}
 {% include nav.html %}
-    <div class="col-md-9">
-        <main>
-            {{ content }}
-        </main>
+    <div class="col-md-9" role="main">
+        {{ content }}
     </div>
 {% include foot.html %}
