--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 {% include head.html %}
 {% include nav.html %}
     <div class="col-md-9" role="main">
+        <h1>{{ page.title }}</h1>
         <main>
             {{ content }}
         </main>
