--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,11 @@
     </div>
     <ul class="nav navbar-nav">
         {% for p in site.pages %}
+        {% if p.title == 'index' %}
         <li>
             <a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
         </li>
+        {% endif %}
         {% endfor %}
     </ul>
 </nav>
